# price-platform

./: .gitignore  .gitlab-ci.yml  .ruff.toml  CLAUDE.md  README.md  pyproject.toml
src/price_platform/: __init__.py  _adapters.py  _client_metrics_sqlite_models.py  _metrics_sqlite_models.py  _sqlite_protocols.py  application.py  cli.py  client_metrics_boxplot.py  client_metrics_social_referrals.py  client_metrics_sqlite.py  client_metrics_svg.py  client_metrics_web_vitals.py  client_metrics_writes.py  healthz.py  identity.py  memory_svg.py  metrics_sqlite.py  metrics_sqlite_analytics.py  metrics_sqlite_reads.py  metrics_sqlite_writes.py  migration_cli.py  schema_registry.py  social_posts.py  sqlite_store.py  store_runtime.py
src/price_platform/auth/: __init__.py  _api_token_flask.py  _api_token_service.py  _metrics_auth_flask.py  _metrics_auth_service.py  api_token.py  metrics_auth.py  password_hash.py  rate_limiter.py  secrets.py
src/price_platform/config/: __init__.py  loader.py  models.py  profiled.py
src/price_platform/content/: __init__.py  about.py  editorial.py  knowledge.py
src/price_platform/managers/: __init__.py  crawl_runtime.py  lifecycle_manager.py  liveness_manager.py  metrics_manager.py  pod_memory_tracker.py
src/price_platform/migrations/: __init__.py  client_metrics.py  price_events.py  webpush.py
src/price_platform/notification/: __init__.py  _notification_payload.py  _notification_posting_history_repository.py  _notification_queue_repository.py  _notification_rate_limit_repository.py  _notification_store_types.py  _webpush_store_types.py  manager.py  notification_store.py  status.py  twitter_poster.py  webpush_sender.py  webpush_store.py
src/price_platform/platform/: __init__.py  browser.py  clock.py  config.py  footprint.py  sqlite.py  webapp.py
src/price_platform/schema/: editorial_policy.schema  knowledge.schema  sqlite_client_metrics.schema  sqlite_keyword_learning.schema  sqlite_metrics.schema  sqlite_notification.schema  sqlite_price_events.schema  sqlite_webpush.schema
src/price_platform/store/: __init__.py  _price_event_context.py  _price_event_enum.py  _price_event_message.py  _price_event_migrations.py  _price_event_rarity.py  _price_event_rules.py  _price_event_suppression.py  _price_event_types.py  _price_statistics.py  fetcher_common.py  price_event_detector.py  price_event_store.py  price_threshold.py  scrape_retry.py  selection.py  shuffle.py  thumbs.py  webdriver_pool.py
src/price_platform/testing/: __init__.py  notification_manager_contract.py
src/price_platform/webapp/: __init__.py  _app_specs.py  _blueprints.py  cors.py  (+7 more)
tests/unit/: test_api_token.py  test_app_identity.py  test_application.py  test_auth_primitives.py  test_cli.py  test_config_loader.py  test_content_about.py  test_content_knowledge.py  test_crawl_runtime.py  test_healthz.py  test_lifecycle_manager.py  test_metrics_auth.py  test_metrics_manager.py  test_migration_cli.py  test_notification_payload.py  test_notification_status.py  test_notification_store_access.py  test_pod_memory_tracker.py  test_price_event_detection.py  test_price_event_message.py  test_runtime_memory_routes.py  test_social_posts.py  test_sqlite_migrations.py  test_store_keyword_learning.py  test_store_runtime.py  test_store_scrape_retry.py  test_store_selection.py  test_webapp_app_factory.py  test_webapp_dependencies.py
(+9 files in other folders)
