[project]
name = "price-platform"
version = "0.1.0"
description = "Shared webapp and auth foundation for product price applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "my-lib @ git+https://github.com/kimata/my-py-lib",
    "PyJWT>=2.8.0",
    "requests>=2.32.0",
    "selenium>=4.0.0",
]
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_platform"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
my-lib = { path = "../my-py-lib", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
