[project]
name = "price-platform"
version = "0.1.0"
description = "Shared webapp and auth foundation for product price applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    "my-lib @ git+https://github.com/kimata/my-py-lib@2435d37f65cd9d2ca317e014049c1f0dd78fd8f5",
    "PyJWT>=2.8.0",
    "requests>=2.32.0",
    "selenium>=4.0.0",
]
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_platform"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
